--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /out/*
 /src/main/java/leetcode/editor/cn/all.json
 /src/main/java/leetcode/editor/cn/translation.json
+/src/main/java/leetcode/editor/cn/doc/
